Base CSS : fix overflow content

--- a/wp-content/themes/WPUTheme/css/d-base.css
+++ b/wp-content/themes/WPUTheme/css/d-base.css
@@ -93,6 +93,7 @@ body {
 
 article .cssc-content {
     min-height: 1px;
+    overflow: hidden;
 }
 
 .wp-caption {
